--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="./img/duck.png" alt="Logo" class="img-fluid" style="max-height: 30px;">
                 </a>
 
-                <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
