--- a/new-book.html
+++ b/new-book.html
@@ -21,7 +21,7 @@
                     <img src="./img/duck.png" alt="Logo" class="img-fluid" style="max-height: 30px;">
                 </a>
 
-                <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -71,41 +71,58 @@
 
                     <div class="mb-3 col-12">
                         <label for="titolo" class="form-label">Titolo</label>
-                        <input type="text" class="form-control" id="titolo"  aria-describedby="titolo-help"
+                        <input type="text" class="form-control" id="titolo" aria-describedby="titolo-help"
                             placeholder="inserisci il Titolo qui" />
-                            <div id="titolo-help" class="form-text">Titolo versione italaina</div>
+                        <div id="titolo-help" class="form-text">Titolo versione italaina</div>
                     </div>
 
                     <div class="row">
                         <div class="mb-3 col-12 col-lg-4">
                             <label for="genere" class="form-label">Genere</label>
                             <select id="genere" class="form-select">
-                              <option>Scegli il genere</option>
-                              <option>m</option>
-                              <option>f</option>
+                                <option>Scegli il genere</option>
+                                <option>m</option>
+                                <option>f</option>
                             </select>
-                          </div>
+                        </div>
 
 
-                          <div class="mb-3 col-12 col-lg-4">
-                            <label for="cognome-autore" class="form-label">Cognome Autore</label>
-                            <input type="text" class="form-control" id="cognome-autore"
-                                placeholder="inserisci il cognome qui" />
+                        <div class="mb-3 col-12 col-lg-4">
+                            <label for="anno-publicazione" class="form-label">Anno di Publicazione</label>
+                            <input type="date" class="form-control" id="anno-publicazione"
+                                placeholder="inserisci l'anno" />
                         </div>
 
                         <div class="mb-3 col-12 col-lg-4">
-                            <label for="cognome-autore" class="form-label">Cognome Autore</label>
-                            <input type="text" class="form-control" id="cognome-autore"
-                                placeholder="inserisci il cognome qui" />
+                            <label for="ISBN#" class="form-label">ISBN#</label>
+                            <input type="text" class="form-control" id="ISBN#"
+                                placeholder="inserisci il codice ISBN#" />
                         </div>
 
 
                     </div>
 
+                    <hr>
+
                     <div class="col-12">
+                        <div class="mb-3">
+                            <label for="Note" class="form-label">Note</label>
+                            <textarea placeholder="Inserisci eventuali note qui" class="form-control"
+                                id="note" rows="3"></textarea>
 
+                        </div>
                     </div>
-
+                    <div class="col-12">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="disponibile" checked>
+                            <label class="form-check-label" for="disponibile">
+                                Disponibile anche in digitale
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-12 mt-2">
+                        <button type="submit" class="btn btn-primary">Aggiungi Libro</button>
+                    </div>
 
                 </form>
             </div>
